# stock-analyst

./: .dockerignore  .env.example  .gitignore  16.05.2026 TODO.md  Dockerfile  TODO.md  docker-compose.yml  fetch.py  main.py  plan.md  pyproject.toml  zprava-hluboky-vyzkum.md
config/: settings.py
data/: scan_state.json
data/offline/: SPY_ohlcv.parquet  full_consolidated_architecture_review.md
data/offline/AAPL/: info.json  ohlcv.parquet  sec_capex.parquet  sec_cash.parquet  sec_cost_of_revenue.parquet  sec_da_expense.parquet  sec_dividends_paid.parquet  sec_eps_basic.parquet  sec_eps_diluted.parquet  sec_equity.parquet  sec_gross_profit.parquet  sec_inventory.parquet  sec_long_term_debt.parquet  sec_net_income.parquet  sec_operating_cf.parquet  sec_operating_income.parquet  sec_rd_expense.parquet  sec_revenue.parquet  sec_shares_outstanding.parquet  sec_total_assets.parquet  sec_total_liabilities.parquet  yf_splits.parquet
data/offline/ABBV/: info.json  ohlcv.parquet  sec_capex.parquet  sec_cash.parquet  sec_cost_of_revenue.parquet  sec_da_expense.parquet  sec_dividends_paid.parquet  sec_eps_basic.parquet  sec_eps_diluted.parquet  sec_equity.parquet  sec_gross_profit.parquet  sec_inventory.parquet  sec_long_term_debt.parquet  sec_net_income.parquet  sec_operating_cf.parquet  sec_operating_income.parquet  sec_revenue.parquet  sec_total_assets.parquet
data/offline/ADBE/: info.json  ohlcv.parquet  sec_capex.parquet  sec_cash.parquet  sec_cost_of_revenue.parquet  sec_da_expense.parquet  sec_eps_basic.parquet  sec_eps_diluted.parquet  sec_equity.parquet  sec_gross_profit.parquet  sec_long_term_debt.parquet  sec_net_income.parquet  sec_operating_cf.parquet  sec_operating_income.parquet  sec_revenue.parquet  sec_shares_outstanding.parquet  sec_total_assets.parquet  sec_total_liabilities.parquet  yf_splits.parquet
data/offline/BAC/: info.json  ohlcv.parquet  sec_cash.parquet  sec_da_expense.parquet  sec_dividends_paid.parquet  sec_eps_basic.parquet  sec_eps_diluted.parquet  sec_equity.parquet  sec_long_term_debt.parquet  sec_net_income.parquet  sec_operating_cf.parquet  sec_revenue.parquet  sec_shares_outstanding.parquet  sec_total_assets.parquet  sec_total_liabilities.parquet  yf_splits.parquet
data/offline/CRM/: info.json  ohlcv.parquet  sec_capex.parquet  sec_cash.parquet  sec_cost_of_revenue.parquet  sec_da_expense.parquet  sec_dividends_paid.parquet  sec_eps_basic.parquet  sec_eps_diluted.parquet  sec_equity.parquet  sec_gross_profit.parquet  sec_long_term_debt.parquet  sec_net_income.parquet  sec_operating_cf.parquet  sec_operating_income.parquet  sec_rd_expense.parquet  sec_revenue.parquet  sec_shares_outstanding.parquet  sec_total_assets.parquet  sec_total_liabilities.parquet  yf_splits.parquet
data/offline/CVX/: info.json  (+17 more)
docs/: algorithm.md  hld.md
reports/: AAPL_debug.txt  ABBV_debug.txt  ACGL_ai_debug.txt  ACGL_debug.txt  ACN_ai_debug.txt  ADBE_ai_debug.txt  ADBE_debug.txt  AEP_ai_debug.txt  APP_ai_debug.txt  AVGO_ai_debug.txt  BAC_debug.txt  BF-B_ai_debug.txt  CMCSA_ai_debug.txt  CPAY_ai_debug.txt  CRM_ai_debug.txt  CRM_debug.txt  CVX_debug.txt  EQT_ai_debug.txt  EXE_ai_debug.txt  FDS_ai_debug.txt  GDDY_ai_debug.txt  GEN_ai_debug.txt  GILD_ai_debug.txt  GM_debug.txt  GOOGL_ai_debug.txt  GRMN_ai_debug.txt  GS_debug.txt  HD_debug.txt  INTC_debug.txt  JKHY_ai_debug.txt  JNJ_debug.txt  JPM_debug.txt  KO_debug.txt  KVUE_ai_debug.txt  LLY_debug.txt  MCO_ai_debug.txt  META_ai_debug.txt  META_debug.txt  MPWR_ai_debug.txt  MSFT_ai_debug.txt  (+14 more)
scripts/: debug_report.py  fetch_offline_data.py  load_offline.py  scan_all.py  scan_config.py  scheduler.py  sp500_pullback_scan.py  sp500_scan.py
src/: classifier.py  runner.py
src/ai/: __init__.py  connector.py
src/charts/: fundamental_chart.py  price_chart.py
src/classification/: classifier.py
src/data/: cache.py  normalizer.py  price.py  sec_edgar.py  universe.py
src/engine/: engine.py
src/horizons/: horizon_scorer.py
src/models/: benchmarks.py  config_version.py
src/output/: formatter.py
src/scoring/: _base.py  base.py  fair_value.py  quality.py  risk.py  style_fit.py  technical.py  valuation.py
src/stop_factors/: stop_checker.py
tests/: test_ai_connector.py  test_benchmarks.py  test_cache.py  test_charts.py  test_classifier.py  test_config_version.py  test_engine.py  test_normalizer.py  test_price.py  test_runner.py  test_scoring.py  test_sec_edgar.py
(+331 files in other folders)
