[project]
name = "stock-analyst"
version = "0.1.0"
description = "Equity scoring engine — rule-based multi-block stock analysis pipeline"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.36",
    "pandas>=2.0",
    "numpy>=2.0",
    "python-dotenv>=1.0",       # load .env into os.environ at startup
    "requests>=2.31",           # SEC EDGAR API calls
    "plotly>=5.22",             # interactive charts (HTML output)
    "pyarrow>=16.0",            # parquet support for pandas cache
    "playwright>=1.44",         # JS-rendered page scraping (investing.com)
    "beautifulsoup4>=4.12",     # HTML parsing
    "lxml>=5.0",                # pandas read_html (universe fetching)
    "python-telegram-bot>=20",  # Telegram Bot API client
    "anthropic>=0.102.0",
    "kaleido>=1.3.0",
    "deep-translator>=1.11.4",
]

[project.scripts]
analyse = "main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",                # linter + formatter
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Ruff config (linter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]    # pycodestyle errors, pyflakes, isort

[tool.ruff.lint.per-file-ignores]
# Scripts use late imports at function level (intentional, avoids circular deps)
"scripts/*.py" = ["E402", "E501", "E701"]
# Test files often have long mock data strings and descriptive assertions
"tests/*.py" = ["E501"]
# main.py: load_dotenv() intentionally called before src imports (E402)
"main.py"     = ["E402", "E501"]
"fetch.py"    = ["E402", "I001"]
# Classifier uses compact semicolon style for score/signal pairs
"src/classifier.py" = ["E701", "E702"]
# Scoring functions use compact table-style if-elif chains (lookup-table pattern)
"src/scoring/quality.py" = ["E701"]
